Fix arrow color and coin header left align

--- a/frontend/src/components/Table.module.scss
+++ b/frontend/src/components/Table.module.scss
@@ -43,6 +43,11 @@
   align-items: center;
 }
 
+.header > div:nth-child(2) {
+  justify-content: flex-start;
+  padding: 4px;
+}
+
 .data {
   margin: 1rem 0 1.6rem 0;
 }
@@ -218,13 +223,13 @@ img {
 }
 
 .iconDown {
-  color: $grey4;
+  color: $grey5;
   margin: 2px;
   padding: 2px;
 }
 
 .iconUp {
-  color: $grey4;
+  color: $grey5;
   margin: 2px;
   padding: 2px;
 }
